@@ -1,3 +1,9 @@
+2008-02-24  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/nm-connection-list.c
+		- (delete_connection_cb): fix removal of connections from the list
+			and internal connection hash
+
 2008-02-20  Dan Williams  <dcbw@redhat.com>
 
 	* src/applet-dbus-settings.c
